--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,10 @@ dependencies:
   json_annotation: ^4.0.1
   cached_network_image: ^3.1.0
   webview_flutter: ^2.0.10
+  moor: ^4.4.1
+  sqlite3_flutter_libs: ^0.5.0
+  path_provider:
+  path:
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -40,6 +44,7 @@ dev_dependencies:
     sdk: flutter
   build_runner: ^2.1.0
   json_serializable: ^4.1.3
+  moor_generator: ^4.4.1
 
 flutter_icons:
   android: "launcher_icon"
